Support dense FHD 30-chart analysis
